...
import com.mitchelllustig.touchtris.data.Pieces
import com.mitchelllustig.touchtris.data.Positions
import com.mitchelllustig.touchtris.ui.widgets.HapticButton

private val positionLabelArray = listOf(
    "Left 5",
    "Left 4",
    "Left 3",
    "Left 2",
    "Left 1",
    "Right 1",
    "Right 2",
    "Right 3",
    "Right 4",
...
