...
                hapticEnabled = hapticEnabled,
                onOrientationChanged = onOrientationChanged,
            )
        }
        OrientationButton(
            modifier = Modifier.weight(1f),
            text = "Clockwise",
            buttonOrientationType = Orientations.three,
            gameState = gameState,
            piece = piece,
            piecePosition = piecePosition,
            pieceOrientation = pieceOrientation,
            hapticEnabled = hapticEnabled,
...
